--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.8.1",
     "@emotion/react": "^11.14.0",
+    "@tanstack/react-query": "^5.66.11",
     "axios": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
